# preference-kg

./: Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: absa_test.ipynb  analyze_entity_similarity.py  analyze_result.ipynb  personachat_test.ipynb  pipeline.ipynb  redial_test.ipynb  review_entity_similarity.py  test.ipynb
notebooks/results/: output_from_gpt4o-mini_20251223_010233.json  output_from_gpt4o-mini_20251223_022125.json  output_from_gpt4o-mini_SU_20251223_022824.json  result_evaluate_mvp_20251223_010233.csv  result_evaluate_mvp_20251223_022125.csv  result_evaluate_mvp_SU_20251223_022824.csv  result_evaluate_mvp_zero_shot_20251223_171000.csv
preference_kg/: README_annotate.md  __init__.py  annotate.py  annotate_preference.py  compare_results.py  dataset.py  experiment_evaluate.py  experiment_extract.py  experiment_extract_multistep.py  extract_preference_dialogues.py  features.py  personalize_mvp.py
preference_kg/annotation/: __init__.py  annotate_dialogue.py
preference_kg/data/: __init__.py  huggingface_loader.py
preference_kg/evaluation/: __init__.py  aggregators.py  dialogue_evaluator.py  (+5 more)
prompt_templates/: axis_definitions.json  axis_definitions_en.json  extract_template.txt  extract_template2.txt  extract_template_context.txt  few_shot_examples.json  few_shot_extract_template.txt  few_shot_extract_template_context.txt  few_shot_extract_template_cot.txt  pa_template.txt  schema_template.json  schema_template_context.json  schema_template_cot.json
tests/: test_matching.py
(+55 files in other folders)
